server/server-envoy.yaml
static_resources:
  listeners:
  # listener_1 unwraps the mTLS TCP stream from the HTTP/2 stream
  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
                - "*"
              routes:
                - match:
                    prefix: "/"
                    headers:
                      - name: ":method"
                        exact_match: "POST"
                  route:
                    cluster: cluster_1
                    upgrade_configs:
                      - upgrade_type: CONNECT
                        connect_config:
                          allow_post: true
          http_filters:
          - name: envoy.filters.http.router
          http2_protocol_options:
            allow_connect: true

  # listener_2 decrypts the mTLS TCP stream into a raw TCP stream.
  - name: listener_2
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 10002
    filter_chains:
    - filters:
      - name: tcp
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_stats
          cluster: cluster_2
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/etc/certs/cert.pem" }
              private_key: { "filename": "/etc/certs/key.pem" }

  clusters:
  # cluster_1 proxies the mTLS TCP stream to listener_2.
  - name: cluster_1
    connect_timeout: 2s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options:
            allow_connect: true
    load_assignment:
      cluster_name: cluster_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10002

  # cluster_2 proxies the raw TCP stream to the TCP server.
  - name: cluster_2
    connect_timeout: 2s
    load_assignment:
      cluster_name: cluster_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7777
